--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.34.1",
+    "sass-loader": "^10.0.0",
+    "scss-loader": "0.0.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
